@@ -1,3 +1,7 @@
+2012-02-27  Matthew Garrett  <mjg@redhat.com>
+
+	* include/grub/efi/pci.h: New file to define EFI PCI protocols.
+
 2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/disk/diskfilter.c (grub_diskfilter_iterate): Fix off-by-one
